Fix navbar collapse issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -198,9 +198,9 @@ body {
 // .card a {
 //   color: ;
 // }
-.site-header {
-  background-color: #007BFF;
-}
+// .site-header {
+//   background-color: #007BFF;
+// }
 
 
 
